Fix Alignment in Hotel Page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13507,6 +13507,20 @@ reply-button {
   font-size: 1.5rem;
 }
 
+.map-hotel {
+  padding-top: 50%; 
+}
+
+.responsive-iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+}
+
 @keyframes animate4 {
   0% {
     bottom: -100%;
